--- a/index.html
+++ b/index.html
@@ -26,31 +26,13 @@
             <img src='./assets/images/Preview.jpg'>
         </article>
 
-    <div id="searchBox">
-
-        <h2 class="block font-medium leading-6 text-gray-900 text-xl">Search for a brewery!</h2>
         <form id="searchForm" class="flex flex-col w-96">
-            <select class="rounded-sm py-3 my-3 border-slate-50 ring-1 ring-inset ring-gray-300" name="parameters" id="selectField">
-                <option value="by_name">name</option>
-                <option value="by_city">city</option>
-                <option value="by_state">state</option>
-            </select>
-        
-            <input type="text" id="searchBar" class=" rounded-md border-0 py-3 my-3 text-gray-900 ring-1 ring-inset ring-gray-300" placeholder="Search by Name">
-            <button type="submit" class="py-3 my-3 rounded-sm border-slate-50 ring-1 ring-inset ring-gray-300" id="searchBtn">Search</button>
-        </form>
-    </div>
-    <div id="brewery-box">
-
-
-            <h2 class="block font-medium leading-6 text-gray-900 text-xl">Search for a brewery!</h2>
-            <form id="searchForm" class="flex flex-col w-96">
+                <h2 class="block font-medium leading-6 text-gray-900 text-xl">Search for a brewery!</h2>
                 <select class="rounded-sm py-3 my-3 border-slate-50 ring-1 ring-inset ring-gray-300" name="parameters"
                     id="selectField">
                     <option value="by_name">name</option>
                     <option value="by_city">city</option>
                     <option value="by_state">state</option>
-                    <option value="by_dist">distance(closest)</option>
                 </select>
 
                 <input type="text" id="searchBar"
@@ -73,7 +55,7 @@
     <div id="map" class="h-96 w-3/4"> <!-- Adjust width (w-3/4) and height (h-96) classes as needed -->
         <!-- Map will be injected here by Mapbox GL JS -->
         <div class="map relative h-32 w-32 ...">
-            <div class="absolute top-0 right-0 h-16 w-16 /div>
+            <div class="absolute top-0 right-0 h-16 w-16 /div">
         </div>
     </div>
     </div>
