added feature to cycle through breweries up to 15

--- a/index.html
+++ b/index.html
@@ -6,16 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brewery Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
-
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.css" type="text/css">
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
-
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.js"></script>
     <link rel="stylesheet" href="./assets/css/style.css"/>
-
-
 </head>
 
 <body>
@@ -25,7 +21,6 @@
         <article class="bq">
             <img src='./assets/images/Preview.jpg'>
         </article>
-
         <form id="searchForm" class="flex flex-col w-96">
                 <h2 class="block font-medium leading-6 text-gray-900 text-xl">Search for a brewery!</h2>
                 <select class="rounded-sm py-3 my-3 border-slate-50 ring-1 ring-inset ring-gray-300" name="parameters"
@@ -34,7 +29,6 @@
                     <option value="by_city">city</option>
                     <option value="by_state">state</option>
                 </select>
-
                 <input type="text" id="searchBar"
                     class=" rounded-md border-0 py-3 my-3 text-gray-900 ring-1 ring-inset ring-gray-300"
                     placeholder="Search by Name">
@@ -44,8 +38,12 @@
                     id="search-around-me-btn">Breweries Around Me</button>
             </form>
         </div>
-        <div id="brewery-box">
-
+        <div>
+            <div id="brewery-box">
+            
+            </div>
+            <button id="previousBtn" class="py-3 my-3 rounded-sm border-slate-50 ring-1 ring-inset ring-gray-300">Previous</button>
+            <button id="nextBtn" class="py-3 my-3 rounded-sm border-slate-50 ring-1 ring-inset ring-gray-300">Next</button>
         </div>
         </form>
         </div>
@@ -59,15 +57,12 @@
         </div>
     </div>
     </div>
-
     <footer>
     </footer>
-    <script src=" https://code.jquery.com/jquery-3.4.1.min.js">
-                </script>
-                <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
-                <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-                    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
-                <script src="./assets/js/script.js"></script>
+    <script src=" https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js" integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
