--- a/index.html
+++ b/index.html
@@ -12,17 +12,13 @@
         type="text/css">
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
-    <<<<<<< HEAD <script
-        src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.js">
-        </script>
-        <link rel="stylesheet" href="./assets/css/style.css" />
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.js">
+    </script>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <script
+        src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.js"></script>
+    <link rel="stylesheet" href="./assets/css/style.css" />
 
-
-        =======
-        <script
-            src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.js"></script>
-        <link rel="stylesheet" href="./assets/css/style.css" />
-        >>>>>>> bdc8f59d138e6f307ea2f8166af0d378f870a0c1
 </head>
 
 <body>
@@ -30,45 +26,45 @@
     </nav>
     <main>
         <article class="bq">
+            <form id="searchForm" class="flex flex-col w-50">
+                <h2 class="block font-medium leading-6 text-gray-900 text-xl text-neutral-950 font-serif italic">Search
+                    for
+                    a brewery!</h2>
+                <select
+                    class="rounded-md py-3 my-3 border-slate-50 ring-1 ring-inset ring-gray-300 text-neutral-950 font-serif italic"
+                    name="parameters" id="selectField">
+                    <option value="by_name">Name</option>
+                    <option value="by_city">City</option>
+                    <option value="by_state">State</option>
+                </select>
+                <input type="text" id="searchBar"
+                    class=" rounded-md border-0 py-3 my-3 text-gray-900 ring-1 ring-inset ring-gray-300 text-neutral-950 font-serif italic"
+                    placeholder="Search by Name">
+                <button type="submit"
+                    class="py-3 my-3 rounded-md border-slate-50 ring-1 ring-inset ring-gray-300 bg-amber-700 text-neutral-950 font-serif italic"
+                    id="searchBtn">Search</button>
+                <button
+                    class="py-3 my-3 rounded-md border-slate-50 ring-1 ring-inset ring-gray-300 bg-amber-700 text-neutral-950 font-serif italic"
+                    id="search-around-me-btn">Breweries Around Me</button>
+            </form>
+            <img src="./assets/css/images/BrewQuest.png" alt="beer world">
         </article>
-        <form id="searchForm" class="flex flex-col w-96">
-            <h2 class="block font-medium leading-6 text-gray-900 text-xl">Search for a brewery!</h2>
-            <select class="rounded-sm py-3 my-3 border-slate-50 ring-1 ring-inset ring-gray-300" name="parameters"
-                id="selectField">
-                <option value="by_name">name</option>
-                <option value="by_city">city</option>
-                <option value="by_state">state</option>
-            </select>
-            <input type="text" id="searchBar"
-                class=" rounded-md border-0 py-3 my-3 text-gray-900 ring-1 ring-inset ring-gray-300"
-                placeholder="Search by Name">
-            <button type="submit" class="py-3 my-3 rounded-sm border-slate-50 ring-1 ring-inset ring-gray-300"
-                id="searchBtn">Search</button>
-            <button class="py-3 my-3 rounded-sm border-slate-50 ring-1 ring-inset ring-gray-300"
-                id="search-around-me-btn">Breweries Around Me</button>
-        </form>
-        </div>
-        <div>
-            <div id="brewery-box">
-
-            </div>
+        <div id="brewery-box">
             <button id="previousBtn"
-                class="py-3 my-3 rounded-sm border-slate-50 ring-1 ring-inset ring-gray-300">Previous</button>
+                class="rounded-md border-3 py-3 my-3 text-gray-900 ring-1 ring-inset ring-gray-300 text-neutral-950 font-serif italic bg-amber-700">Previous</button>
             <button id="nextBtn"
-                class="py-3 my-3 rounded-sm border-slate-50 ring-1 ring-inset ring-gray-300">Next</button>
+                class="py-3 my-3 rounded-md border-slate-50 ring-1 ring-inset ring-gray-300 text-neutral-950 font-serif italic bg-amber-700">Next</button>
         </div>
-        </form>
+        <div id="map" class="h-96 w-3/4"> <!-- Adjust width (w-3/4) and height (h-96) classes as needed -->
+            <!-- Map will be injected here by Mapbox GL JS -->
+            <div class="map relative h-20 w-20 ...">
+                <div class="absolute top-0 right-0 h-20 w-20 /div">
+                </div>
+            </div>
         </div>
     </main>
     <!-- <div class="flex justify-center items-center h-screen"> -->
     <!-- This ensures full screen height and centers its children -->
-    <div id="map" class="h-96 w-3/4"> <!-- Adjust width (w-3/4) and height (h-96) classes as needed -->
-        <!-- Map will be injected here by Mapbox GL JS -->
-        <div class="map relative h-20 w-20 ...">
-            <div class="absolute top-0 right-0 h-20 w-20 /div">
-            </div>
-        </div>
-    </div>
     </div>
     <footer>
     </footer>
