--- a/index.html
+++ b/index.html
@@ -12,17 +12,11 @@
         type="text/css">
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
-    <<<<<<< HEAD <script
-        src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.js">
-        </script>
-        <link rel="stylesheet" href="./assets/css/style.css" />
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.js"> </script>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.js"></script>
+    <link rel="stylesheet" href="./assets/css/style.css" />
 
-
-        =======
-        <script
-            src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.0/mapbox-gl-directions.js"></script>
-        <link rel="stylesheet" href="./assets/css/style.css" />
-        >>>>>>> bdc8f59d138e6f307ea2f8166af0d378f870a0c1
 </head>
 
 <body>
