added new div for next and previous btns

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <img src="./assets/css/images/BrewQuest.png" alt="beer world">
         </article>
         <div id="brewery-box">
+
+        </div>
+        <div >
             <button id="previousBtn"
                 class="rounded-md border-3 py-3 my-3 text-gray-900 ring-1 ring-inset ring-gray-300 text-neutral-950 font-serif italic bg-amber-700">Previous</button>
             <button id="nextBtn"
