--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
     <div id="map" class="h-96 w-3/4"> <!-- Adjust width (w-3/4) and height (h-96) classes as needed -->
         <!-- Map will be injected here by Mapbox GL JS -->
         <div class="map relative h-32 w-32 ...">
-            <div class="absolute top-0 right-0 h-16 w-16 /div>
+            <div class="absolute top-0 right-0 h-16 w-16"></div>
         </div>
     </div>
     </div>
 
     <footer>
     </footer>
-    <script src=" https://code.jquery.com/jquery-3.4.1.min.js">
-                </script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+                
                 <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
                 <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
                     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
