--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
             <!-- Map will be injected here by Mapbox GL JS -->
             <div class="map relative h-32 w-32 ...">
                 <div class="absolute top-0 right-0 h-16 w-16"></div>
+                <div id="directions-container"></div>
+
                 </div>
             </div>
         </div>
