finishing touches on map

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 <button type="submit"
                     class="py-3 my-3 rounded-md border-slate-50 ring-1 ring-inset ring-gray-300 bg-amber-700 text-neutral-950 font-serif italic"
                     id="searchBtn">Search</button>
-                <button
+                <!-- <button
                     class="py-3 my-3 rounded-md border-slate-50 ring-1 ring-inset ring-gray-300 bg-amber-700 text-neutral-950 font-serif italic"
                     id="search-around-me-btn">Breweries Around Me</button>
-                    <div >
+                    <div > -->
             <button id="previousBtn"
                 class="rounded-md border-3 py-3 my-3 text-gray-900 ring-1 ring-inset ring-gray-300 text-neutral-950 font-serif italic bg-amber-700">Previous</button>
             <button id="nextBtn"
